<package>
  <name>jskeus</name>
  <version>0.0.0</version>
  <description>EusLisp software developed and used by JSK at The University of Tokyo</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://euslisp.github.io/jskeus/manual.html</url>
  <url type="bugtracker">https://github.com/euslisp/jskeus/issues</url>

  <author>JSK Alumnis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>euslisp</build_depend>

  <run_depend>euslisp</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
